update libraries and added GitHub embed component.

--- a/src/pages/works/Example.mdx
+++ b/src/pages/works/Example.mdx
@@ -6,6 +6,9 @@ description: "作品の簡単な説明"
 author: "著者"
 tags: ["作品に付きそうなタグ","例えば、","Processing","Web","Game","など"]
 ---
+import Card from "../../components/Card.astro";
+import Warn from "../../components/Warn.astro";
+import GitHubEmbed from "../../components/GitHubEmbed.astro";
 
 ここに内容が入るよ
 
@@ -25,3 +28,19 @@ tags: ["作品に付きそうなタグ","例えば、","Processing","Web","Game"
 ---
 
 こんな風に書けます。
+
+## コンポーネントの紹介
+### Card
+Cardコンポーネントを使うと、リンクカードを作成することができます。
+
+<Card url="https://rokkophysicsclub.github.io/rpc-2024/"/>
+
+### Warn
+Warnコンポーネントを使うと、注意書きを作成することができます。
+
+<Warn>注意書きの内容</Warn>
+
+### GitHubEmbed
+GitHubEmbedコンポーネントを使うと、GitHubのリポジトリを埋め込むことができます。
+
+<GitHubEmbed permalink="https://github.com/Asynchronous-0x4C/Simple_Shooting_2.1/blob/main/Simple_shooting_2_1/net.pde#L1-L17"/>
